--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-<link rel=”stylesheet” href=”styles.css”>
---cor-de-fundo: #EBECEE
+link rel”stylesheet” href”styles.css”>
+--cor-de-fundo #EBECEE
 body
-{
 
-    background-color: var(--cor-de-fundo);
-}
 
-<h1 {
-    background-color: white;
+    background-color var(--cor-de-fundo);
+
+
+h1 {
+    background-color: white
 }
